--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>formadores2024</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&family=Poppins&display=swap" rel="stylesheet">
 </head>
+
 <body>
         <header class="cabeçalho">
         <img class="logo" src="alurastart logo 1.png">
@@ -14,6 +18,8 @@
                 <li1 class="Item-estudante">Estudante</li1>
         </ul>
          </header>
+
+
          <section class="escola">
             <div class="escola-div-conteúdo">
                 <h2 class="escola-título">Sobre a escola</h2>
@@ -21,6 +27,102 @@
                  <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
             </div>
             <img class ="escola-imagem" src="escola-imagem.png" alt="escola-imagem">
+        </section>
+
+
+        <section class="estudante">
+            <h2 class="estudante-titulo">Quem são nossos estudantes</h2>
+            <div class="estudante-todos">
+            <span></span>
+                <div class="estudante-div">
+                    <img class="estudante-imagem" src="Mario.jpg" alt="estudante mario">
+                    <h3 class="estudante-nome">Mario</h3>
+                        <a href="https://github.com/"><img class="estudante-icone" src="github.png" alt="GitHub">
+                        </a>
+                        <a href="https://www.instagram.com"><img class="estudante-icone" src="instangram.jpg" alt="Instangram">
+                        </a>
+                        <a href="//https://br.linkedin.com/"><img class="estudante-icone" src="linkedin.png" alt="Linkedin">
+                        </a>
+                </div>
+
+                <div class="estudante-div">
+                    <img class="estudante-imagem" src="Mario.jpg" alt="estudante mario">
+                    <h3 class="estudante-nome">Mario</h3>
+                        <a href="https://github.com/"><img class="estudante-icone" src="github.png" alt="GitHub">
+                        </a>
+                        <a href="https://www.instagram.com"><img class="estudante-icone" src="instangram.jpg" alt="Instangram">
+                        </a>
+                        <a href="//https://br.linkedin.com/"><img class="estudante-icone" src="linkedin.png" alt="Linkedin">
+                        </a>
+                </div>
+
+                <div class="estudante-div">
+                    <img class="estudante-imagem" src="Mario.jpg" alt="estudante mario">
+                    <h3 class="estudante-nome">Mario</h3>
+                        <a href="https://github.com/"><img class="estudante-icone" src="github.png" alt="GitHub">
+                        </a>
+                        <a href="https://www.instagram.com"><img class="estudante-icone" src="instangram.jpg" alt="Instangram">
+                        </a>
+                        <a href="//https://br.linkedin.com/"><img class="estudante-icone" src="linkedin.png" alt="Linkedin">
+                        </a>
+                </div>
+                
+                <div class="estudante-div">
+                    <img class="estudante-imagem" src="Mario.jpg" alt="estudante mario">
+                    <h3 class="estudante-nome">Mario</h3>
+                        <a href="https://github.com/"><img class="estudante-icone" src="github.png" alt="GitHub">
+                        </a>
+                        <a href="https://www.instagram.com"><img class="estudante-icone" src="instangram.jpg" alt="Instangram">
+                        </a>
+                        <a href="//https://br.linkedin.com/"><img class="estudante-icone" src="linkedin.png" alt="Linkedin">
+                        </a>
+                </div>
+                <span></span>
+                <span></span>
+                <div class="estudante-div">
+                    <img class="estudante-imagem" src="Mario.jpg" alt="estudante mario">
+                    <h3 class="estudante-nome">Mario</h3>
+                        <a href="https://github.com/"><img class="estudante-icone" src="github.png" alt="GitHub">
+                        </a>
+                        <a href="https://www.instagram.com"><img class="estudante-icone" src="instangram.jpg" alt="Instangram">
+                        </a>
+                        <a href="//https://br.linkedin.com/"><img class="estudante-icone" src="linkedin.png" alt="Linkedin">
+                        </a>
+                </div>
+
+                <div class="estudante-div">
+                    <img class="estudante-imagem" src="Mario.jpg" alt="estudante mario">
+                    <h3 class="estudante-nome">Mario</h3>
+                        <a href="https://github.com/"><img class="estudante-icone" src="github.png" alt="GitHub">
+                        </a>
+                        <a href="https://www.instagram.com"><img class="estudante-icone" src="instangram.jpg" alt="Instangram">
+                        </a>
+                        <a href="//https://br.linkedin.com/"><img class="estudante-icone" src="linkedin.png" alt="Linkedin">
+                        </a>
+                </div>
+
+                <div class="estudante-div">
+                    <img class="estudante-imagem" src="Mario.jpg" alt="estudante mario">
+                    <h3 class="estudante-nome">Mario</h3>
+                        <a href="https://github.com/"><img class="estudante-icone" src="github.png" alt="GitHub">
+                        </a>
+                        <a href="https://www.instagram.com"><img class="estudante-icone" src="instangram.jpg" alt="Instangram">
+                        </a>
+                        <a href="//https://br.linkedin.com/"><img class="estudante-icone" src="linkedin.png" alt="Linkedin">
+                        </a>
+                </div>
+
+                <div class="estudante-div">
+                    <img class="estudante-imagem" src="Mario.jpg" alt="estudante mario">
+                    <h3 class="estudante-nome">Mario</h3>
+                        <a href="https://github.com/"><img class="estudante-icone" src="github.png" alt="GitHub">
+                        </a>
+                        <a href="https://www.instagram.com"><img class="estudante-icone" src="instangram.jpg" alt="Instangram">
+                        </a>
+                        <a href="//https://br.linkedin.com/"><img class="estudante-icone" src="linkedin.png" alt="Linkedin">
+                        </a>
+                </div>
+            </div>
         </section>
    
     
