--- a/index.html
+++ b/index.html
@@ -125,6 +125,12 @@
             </div>
         </section>
    
-    
+    <footer class="rodapé"> 
+        <img class="imagem-rodapé" src="alurastart logo 1.png" alt="Logo alura">
+        <div class="div-rodapé">
+            <a href="https://www.google.com/maps/dir/-26.230784,-52.6811136/Av.+Newton+Marcondes+de+Oliveira,+220,+Cand%C3%B3i+-+PR,+85140-000/@-25.8972461,-53.0241232,9z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x94efa03c269f76f3:0xf582977b13ad4c0!2m2!1d-52.0463679!2d-25.56662?entry=ttu"><img class="imagem-localização" src="local.png" alt="localização"></a>
+            <h2 class="endereço-localização"> Avenida Newton Marcondes de Oliveira, 2220</h2>
+        </div>
+    </footer>
 </body>
 </html>
